3_nginx-ingress-controller/test1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test1
  namespace: test1
spec:
  selector:
    matchLabels:
      app: test1
  template:
    metadata:
      labels:
        app: test1
    spec:
      containers:
      - name: test1
        image: nginx:latest
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command: ["/bin/bash", "-c", "echo 'you are checking domain test1.mykubernetes.guru' > /usr/share/nginx/html/index.html"]
