3_nginx-ingress-controller/test2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2
  namespace: test2
spec:
  selector:
    matchLabels:
      app: test2
  template:
    metadata:
      labels:
        app: test2
    spec:
      containers:
      - name: test2
        image: nginx:latest
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command: ["/bin/bash", "-c", "echo 'you are checking domain test2.mykubernetes.guru' > /usr/share/nginx/html/index.html"]
