3_nginx-ingress-controller/test1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test1-service
  namespace: test1
  labels:
    app: test1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: test1
