3_nginx-ingress-controller/test2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test2-service
  namespace: test2
  labels:
    app: test2
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: test2
