3_nginx-ingress-controller/test3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test3-service
  namespace: test3
  labels:
    app: test3
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: test3
