3_nginx-ingress-controller/test1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test1-ingress
  namespace: test1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test1.mykubernetes.guru
    http:
      paths:
      - backend:
          serviceName: test1-service
          servicePort: 80
        path: /
