3_nginx-ingress-controller/test2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test2-ingress
  namespace: test2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test2.mykubernetes.guru
    http:
      paths:
      - backend:
          serviceName: test2-service
          servicePort: 80
        path: /
